# testomat_tests

./: .gitignore  README.md  conftest.py  index.html  pyproject.toml  pytest.ini  requirements.txt  summary.json
.github/actions/publish-allure-pages/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: all_tests_report.yml  api_tests.yml  playwright_ui_tests.yml  selenium_tests.yml
25/: index.html
25/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
25/data/attachments/: 13dc96019975d21.txt  178b2011e5c0708f.txt  1e1d5be5b9fd6b6.txt  245fddd6f5b51f7f.txt  2491930d04bfe947.txt  24cccf1ff331f996.txt  26bb4bf1e812779.txt  296863c18c7dab1f.txt  2b559a934004bb01.txt  3f23aea8c4933ad2.txt  46ed19c685e51013.txt  4841cecdb1fb27ea.txt  554587f9198e039e.txt  5bba1516893239c7.txt  6286013dd94a1a69.txt  65f2e28dff65d974.txt  6885cd84a95d573e.txt  6976fb2b49b0849d.txt  72bbc50063aeb85c.txt  72cd565f96646893.txt  73ea2dfa434a6a77.txt  78517df90e4e368a.txt  7ad8b0adf0e721d0.txt  81478ea854494b35.txt  85bee94a60367a4f.txt  85f44cab4e8a83cf.txt  90ca9159ddb312de.txt  9153bc8ea24c25e9.txt  924c87a9103ba099.txt  93ba78e0741118fd.txt  9850faaf3807b23e.txt  a481351ea98013cf.txt  a4871e4341f12086.txt  b04ec862dc59bde3.txt  bde0498f7eec3ce2.txt  be6b87622b9dd474.txt  c5d59c9e23117f4f.txt  c616a671368224a2.txt  ca24ff2a4178ff35.txt  cbe8e7f240d44c74.txt  (+7 more)
25/data/test-cases/: 1222abd1573bbcc4.json  140d5c33e158c17e.json  (+79 more)
25/export/: influxDbData.txt  prometheusData.txt
25/history/: categories-trend.json
25/widgets/: executors.json  severity.json  status-chart.json  suites.json  summary.json
fixtures/: playwright.py  settings.py
last-history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
src/: __init__.py
src/api/: __init__.py  client.py  logger.py  utils.py
src/web/: __init__.py  application.py
tests/: conftest.py  first_test.py
tests/api/: projects_test.py  suite_and_test_creation_test.py  test_analytics.py  test_misc.py  test_plans.py  test_runs.py  test_suites.py  test_templates.py
tests/fixtures/: __init__.py  api.py  hooks.py  playwright.py  selenium.py
tests/web/: cookies_test.py  login_page_test.py  project_creation_test.py  projects_page_test.py  test_create_suite.py
widgets/: categories.json  charts.json  nav.json  pie_chart.json  statistic.json  timeline.json  tree-filters.json  tree.json
widgets/default/: categories.json  nav.json  pie_chart.json  statistic.json  tree.json
(+81 files in other folders)
